[package]
name = "risingwave_udf"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-machete]
ignored = ["workspace-hack"]

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
arrow-array = "44"
arrow-flight = "44"
arrow-ipc = "44"
arrow-schema = "44"
arrow-select = "44"
base64 = "0.21"
bytes = "1.4"
futures-util = "0.3.25"
itertools = "0.10"
risingwave_object_store = { workspace = true }
static_assertions = "1"
thiserror = "1"
tokio = { version = "0.2", package = "madsim-tokio", features = ["rt", "macros"] }
tonic = { workspace = true }
tracing = "0.1"
wasmtime = { version = "10", features = ["component-model"] }
wasmtime-wasi = { version = "10" }
