[package]
name = "risingwave_meta_types"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["workspace-hack"]

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
etcd-client = { version = "0.2", package = "madsim-etcd-client" }
itertools = "0.10"
risingwave_common = { path = "../../common" }
risingwave_connector = { path = "../../connector" }
risingwave_hummock_sdk = { path = "../../storage/hummock_sdk" }
risingwave_pb = { path = "../../prost" }
risingwave_rpc_client = { path = "../../rpc_client" }

[target.'cfg(not(madsim))'.dependencies]
axum = "0.6"
tower-http = { version = "0.3", features = ["add-extension", "cors", "fs"] }
workspace-hack = { path = "../../workspace-hack" }

[dev-dependencies]
assert_matches = "1"
maplit = "1.0.2"
rand = "0.8"
risingwave_test_runner = { path = "../../test_runner" }
static_assertions = "1"
tempfile = "3"
